<resources>
    <!--    App Name-->
    <string name="app_name">Movieland</string>
    <!--    Screen Headers-->
    <string name="app_menu">Main Menu</string>
    <string name="text_register">Register Movie</string>
    <string name="text_display">Display Movies</string>
    <string name="text_favourite">Favourites</string>
    <string name="text_edit">Edit Movies</string>
    <string name="text_watched">Watched Movies</string>
    <string name="text_search">Search Movies</string>
    <string name="text_rating">Ratings</string>
    <!--    Buttons-->
    <string name="btn_register">Register Movie</string>
    <string name="btn_display">Display Movies</string>
    <string name="btn_favourite">Favourites</string>
    <string name="btn_edit">Edit Movies</string>
    <string name="btn_search">Search Movies</string>
    <string name="btn_rating">Ratings</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_add_to_fav">Add to Favourite</string>
    <string name="btn_update">Update</string>
    <string name="btn_search_imdb">Search from IMDb</string>
    <string name="btn_look_up">Look Up</string>
    <!--    Hint Text-->
    <string name="hint_1">Enter Here</string>
    <!--    Descriptions-->
    <string name="desc_main_card_image_1">register movie card img</string>
    <string name="desc_main_card_image_2">display movie card img</string>
    <string name="desc_main_card_image_3">fav movie card img</string>
    <string name="desc_main_card_image_4">edit movie card img</string>
    <string name="desc_main_card_image_5">search movie card img</string>
    <string name="desc_main_card_image_6">rating movie card img</string>
    <string name="desc_imageView_logo">Logo</string>
    <string name="imageView_card_movie">Card Image</string>
    <!--    Text Inputs Labels-->
    <string name="desc_txt_title">Title of Movie</string>
    <string name="desc_txt_year">Year</string>
    <string name="desc_txt_director">Director</string>
    <string name="desc_txt_actor">Cast</string>
    <string name="desc_txt_rating">Rate</string>
    <string name="desc_txt_review">Review</string>
</resources>
