<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/search_movie_item"
    android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:id="@+id/search_movie"
        android:layout_width="345dp"
        android:layout_height="110dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/desc_txt_title"
                android:text="@string/desc_txt_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_card_movie"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_year_1"
                android:layout_width="49dp"
                android:layout_height="20dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/desc_txt_year"
                android:text="@string/desc_txt_year"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/movie_director_2"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginEnd="194dp"
                android:layout_marginRight="194dp"
                android:layout_marginBottom="23dp"
                android:contentDescription="@string/desc_txt_director"
                android:text="@string/desc_txt_director"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/movie_actors_2"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginEnd="104dp"
                android:layout_marginRight="104dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/desc_txt_actor"
                android:text="@string/desc_txt_actor"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView_card_movie"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:contentDescription="@string/imageView_card_movie"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flower_1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>