<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavouritesActivity">

    <ImageView
        android:id="@+id/imageView_logo3"
        android:layout_width="310dp"
        android:layout_height="104dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_imageView_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/head" />

    <Button
        android:id="@+id/button_save_fav"
        android:layout_width="322dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:onClick="clickedSaveButton"
        android:text="@string/btn_save"
        app:backgroundTint="@color/dark_pink"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_fav" />

    <TextView
        android:id="@+id/textView_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_favourite"
        android:textColor="@color/pink_purple"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo3" />


    <LinearLayout
        android:id="@+id/linearLayout_fav"
        android:layout_width="336dp"
        android:layout_height="373dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_favourites">

        <ListView
            android:id="@+id/listview_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>